# www

./: .drone.yml  Cargo.toml  Dockerfile  default.nix  shell.nix
.github/workflows/: ci.yml  docker-image.yml
assets/css/: main.css
assets/favicon/: about.txt
assets/img/badges/: Censor_PGc.apng  arc.apng  dam.apng  debian.apng  e2v2-88x31.apng  fediverse.apng  firefoxget.apng  gaymusic.apng  kibty.town-badge.apng  lily_pet.apng  penguins.apng  retr0id_now.apng  roly-saynotoweb3.apng  slonk.apng  vcss-blue.apng  vscode.apng  yoshi-egg-crack.apng  zptr.apng
content/: .gitignore  badges.csv  things.csv
content/words/: .gitignore  cdma-example.md  fios-home-router-emoji.md  github-actions-k8s.md  new-mexico.md  nvim-glow.md  punytld.md  shrinking-docker-images.md  substring.md  sysdb-and-gnmi.md  weird-wifi-name-display.md  weird-wifi-names-cont.md
hack/: cleanup_badges.sh
src/: badges.rs  main.rs  name.rs  rss.rs  sitemap.rs  things.rs  update.rs  utils.rs  webring.rs  words.rs
src/site/: error404.rs  home.rs  mod.rs  nginx.rs  things.rs  words.rs
