[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.31"
comrak = { git = "https://github.com/haylinmoore/comrak", branch = "main"}
env_logger = "0.10.1"
gray_matter = "0.2.6"
log = "0.4.20"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.194", features = ["derive"] }
sitemap = "0.4.1"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
ureq = { version = "2.10.0", features = ["json"] }
xml = "0.8.10"
